Реализовать CRUD комментариев для постов
добавлены endpoint’ы POST PUT DELETE для комментариев в PostController

добавлены CommentDao и CommentDaoJdbcTemplate для работы с таблицей comments

расширены CommentService и CommentServiceImpl логикой add update delete и валидацией текста

добавлен CreateCommentRequest для операций создания и редактирования комментария

обновлён schema.sql: добавлена таблица comments, внешний ключ на posts и тестовые данные

расширены MVC тесты PostController на сценарии комментариев и добавлен мок CommentDao в ServiceTestConfig